--- a/cw/templates/admin/a_home.html
+++ b/cw/templates/admin/a_home.html
@@ -147,6 +147,8 @@
         <a class="nav-link active" href="../"><i class="fas fa-home me-2"></i>Dashboard</a>
         <a class="nav-link" href="quize"><i class="fas fa-tasks me-2"></i>Quizzes & Questions</a>
         <a class="nav-link" href="#"><i class="fas fa-users me-2"></i>Users</a>
+        <a class="nav-link" href="logout"><i ></i>Logout</a>
+
     </nav>
 </div>
     <!-- Main Content -->
