--- a/cw/templates/admin/questions.html
+++ b/cw/templates/admin/questions.html
@@ -110,8 +110,9 @@
         </div>
         <nav class="nav flex-column">
             <a class="nav-link active" href="../a_home" style="color: aliceblue;"><i class="fas fa-home me-2"></i>Dashboard</a>
-            <a class="nav-link" href="quize" style="color: aliceblue;"><i class="fas fa-tasks me-2"></i>Quizzes & Questions</a>
-            <a class="nav-link" href="#" style="color: aliceblue;"><i class="fas fa-users me-2"></i>Users</a>
+            <a class="nav-link" href="{% url 'quize' %}" style="color: aliceblue;"><i class="fas fa-tasks me-2"></i>Quizzes & Questions</a>
+            <a class="nav-link" href="view_users" style="color: aliceblue;"><i class="fas fa-users me-2"></i>Users</a>
+            <a class="nav-link" href="logout" style="color: aliceblue;"><i ></i>Logout</a>        
         </nav>
     </div>
     
@@ -119,22 +120,14 @@
         <!-- Header -->
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2 class="animate__animated animate__fadeIn">Questions</h2>
-            <a href="../add_qns">
+            <a href="{% url 'add_qns' %}">
                 <button class="btn btn-primary animate__animated animate__fadeIn">
                     <i class="fas fa-plus me-2"></i>Add New Question
                 </button>
             </a>
         </div>
 
-        <!-- Search and Filter Section -->
-        <div class="search-filter animate__animated animate__fadeInUp">
-            <div class="row g-3">
-                <div class="col-md-4">
-                    <input type="text" class="form-control bg-transparent text-white" placeholder="Search questions...">
-                </div>
-            </div>
-        </div>
-
+        
         <!-- Questions List -->
         <div class="questions-list">
             {% for q in ques %}
@@ -165,7 +158,7 @@
                                 <i class="fas fa-edit"></i>
                             </button>
                         </a>
-                        <a href="del_qns/{{q.pk}}">
+                        <a href="{% url 'del_qns' qid=q.pk|add:'0' %}">
                             <button class="btn btn-action btn-sm">
                                 <i class="fas fa-trash"></i>
                             </button>
